IntelliJ-assisted introduction of pattern variables and replacement of get(0) with getFirst()